# better-finder-mcp

./: .betterfinderignore  .gitignore  LICENSE  README.md  main.py  pyproject.toml
enhanced_finder/: __init__.py  agents.py  cli.py  config.py  file_processors.py  indexer.py  main.py  mcp_server.py  simple_agents.py  staging.py
